--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ./src --max-warnings=0"
   },
   "dependencies": {
+    "@elice/openapi-client-external-contents": "file:lib/elice-openapi-client-external-contents-1.231214.0.tgz",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.14.9",
@@ -30,7 +31,8 @@
     "react-dom": "~18.2.0",
     "react-intl": "~6.5.0",
     "react-router-dom": "~6.20.0",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@elice/browserslist-config": "file:lib/elice-browserslist-config-1.230815.0.tgz",
